feat: create changelog + minor fixes dtos